--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,37 @@ body {
 .fa-bars {
     color: white;
 }
+
+.main {
+    background-image: url("/assets/bg-spotify.webp");
+    background-size: cover;
+    background-position: center;
+    padding: 10rem 2rem;
+    text-align: center;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.titleMain {
+    color: white;
+    font-size: 3rem;
+}
+
+.subtitleMain {
+    color: white;
+    font-size: 1rem;
+}
+
+.btnMain {
+    color: white;
+    background-color: #1ed760;
+    padding: 1rem 3rem;
+    border-radius: 5rem;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
+    width: 20rem;
+    margin: 0 auto;
+}
