--- a/css/media.css
+++ b/css/media.css
@@ -14,7 +14,9 @@
     }
 
     .header {
-        justify-content: space-evenly;
+        justify-content: space-between;
+        padding-left: 8rem;
+        padding-right: 8rem;
     }
 
     .navMenuDesktop {
