updated project title and put position fixed for the  header

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ body {
     align-items: center;
     background-color: var(--bg-header);
     padding: 2rem 0;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .logo {
