--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,26 @@ body {
 .fa-bars {
     color: white;
     font-size: 2.5rem;
-    cursor: pointer;
+    cursor: 
+    pointer;
+}
+
+.navMenuHamburger {
+    position: relative;
+}
+
+.menuHamburger {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 7rem;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    background-color: var(--bg-header);
+    color: white;
+    padding: 1rem 0;
+    line-height: 2.5rem;
 }
 
 /* main */
